fix(YALB-621): updates hover/spacing for social links component

--- a/components/02-molecules/social-links/_social-links.scss
+++ b/components/02-molecules/social-links/_social-links.scss
@@ -1,11 +1,23 @@
 @use '../../01-atoms/atoms';
 
+.social-links {
+  // Create social-links specific color properties
+  --color-social-links-hover: var(--link-color-base);
+
+  // Create the "inverted" social-links specific color properties
+  [data-component-theme='gray-800'] &,
+  [data-component-theme='gray-700'] &,
+  [data-component-theme='blue-yale'] & {
+    --color-social-links-hover: var(--link-color-hover);
+  }
+}
+
 .social-links__list {
   @include atoms.list-reset;
 
   display: flex;
   flex-wrap: wrap;
-  gap: var(--size-spacing-4);
+  gap: var(--size-spacing-6);
 }
 
 .social-links__link {
@@ -15,6 +27,10 @@
   justify-content: center;
   min-height: var(--size-click-target-minimum);
   min-width: var(--size-click-target-minimum);
+
+  &:hover {
+    color: var(--color-social-links-hover);
+  }
 }
 
 .social-links__icon {
